@@ -19,6 +19,7 @@ nytprof.out
 pm_to_blib
 README
 README.pod
+lib/Coverage/Server/coverage-server_local.json
 t/ipc_srlock*
 var/data
 var/logs
