@@ -30,7 +30,7 @@ my $prereqs  = {
     'Type::Tiny' => '1.000005',
     'Unexpected' => 'v0.39.0',
     'Web::Components' => 'v0.4.0',
-    'Web::Components::Role::TT' => 'v0.2.0',
+    'Web::Components::Role::TT' => 'v0.4.0',
     'Web::Simple' => '0.030',
     'local::lib' => '2.000015',
     'namespace::autoclean' => '0.26',
