@@ -1,9 +1,11 @@
 Build.PL
 Changes
 MANIFEST
+bin/coverage-cli
 bin/coverage-localenv
 bin/coverage-server
 lib/Coverage/Server.pm
+lib/Coverage/Server/CLI.pm
 lib/Coverage/Server/Config.pm
 lib/Coverage/Server/Controller/Root.pm
 lib/Coverage/Server/Model.pm
