@@ -62,6 +62,7 @@ Thumbs.db
 
 # Avoid archives of this distribution
 \bCoverage-Server-v?[\d\.\_]+
+lib/Coverage/Server/coverage-server_local.json
 var/data
 var/logs
 var/tmp
