@@ -11,7 +11,7 @@ requires "Try::Tiny" => "0.22";
 requires "Type::Tiny" => "1.000005";
 requires "Unexpected" => "v0.39.0";
 requires "Web::Components" => "v0.4.0";
-requires "Web::Components::Role::TT" => "v0.2.0";
+requires "Web::Components::Role::TT" => "v0.4.0";
 requires "Web::Simple" => "0.030";
 requires "local::lib" => "2.000015";
 requires "namespace::autoclean" => "0.26";
