@@ -19,7 +19,7 @@ Try::Tiny         = 0.22
 Type::Tiny        = 1.000005
 Unexpected        = v0.39.0
 Web::Components   = v0.4.0
-Web::Components::Role::TT = v0.3.0
+Web::Components::Role::TT = v0.4.0
 Web::Simple       = 0.030
 
 [Prereqs / ConfigureRequires]
